2003-01-28  Frank Warmerdam  <warmerdam@pobox.com>

	* shptree.c: avoid build warnings.

2002-05-07  Frank Warmerdam  <warmerdam@pobox.com>

	* dbfopen.c: Added DBFWriteAttributeDirectly() from the AVCE00
	distribution to simplify AVC integration in GDAL.

	* shptree.c: added use of qsort() in place of bubble sort as 
	submitted by Bernhard Herzog.

2002-04-10  Frank Warmerdam  <warmerdam@pobox.com>

	* shpopen.c: Added SHPRewindObject() to correct ring winding.

	* shprewind.c: New utility program.

2002-03-12  Frank Warmerdam  <warmerdam@pobox.com>

	* shapelib.def: added DBFWriteNULLAttribute.

2002-01-17  Frank Warmerdam  <warmerdam@pobox.com>

	* contrib/ShapeFileII.pas: Contributed Delphi Pascal interface
	to Shapelib. 

2002-01-15  Frank Warmerdam  <warmerdam@pobox.com>

	* shapelib.h: Added support for SHAPELIB_DLLEXPORT macro, and write
	up material attempting to explain the use of SHPAPI_CALL macros.

	* dbfopen.c: Compute nHeaderLength in DBFCloneEmpty() instead of
	copying it from the source file so we don't have quirks when copying
	from files with extra bytes of spacers in the header that don't 
	themselves get copied properly.

2001-12-07  Frank Warmerdam  <warmerdam@pobox.com>

	* shpopen.c: Fix fclose() of SHX file if SHX file fails to open. 
	Should be closing SHP file.  Reported by Ben Discoe.

2001-11-28  Frank Warmerdam  <warmerdam@pobox.com>

	* dbfopen.c: two fixes for compiler warnings as suggested by
	Richard Hash.

2001-11-01  Frank Warmerdam  <warmerdam@pobox.com>

	* shpopen.c/shapefil.h: Move record buffer into SHPInfo so that 
	different threads can safely access separate files.  Other threading
	issues may remain.

2001-08-28  Frank Warmerdam  <warmerdam@pobox.com>

	* Issue Shapelib 1.2.9

	* shputils.c: DBFAddField() call should check for -1 return value
	for failure.

2001-07-03  Frank Warmerdam  <warmerdam@pobox.com>

	* shpopen.c: cleanup better if SHX missing, provided by 
	Riccardo Cohen.
