@@ -1,3 +1,8 @@
+2003-03-10  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* dbfopen.c: modified DBFWriteAttribute call so that it returns FALSE
+	if it has to truncate the input value.
+
 2003-01-28  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* shptree.c: avoid build warnings.
